--- a/skani.html
+++ b/skani.html
@@ -64,7 +64,7 @@
 <br>
 <div class="row">
     <div class="col-12 text-center">
-        <video width="80%" controls autoplay muted>
+        <video width="80%" controls autoplay>
           
             <source src="video/Slike.mp4" type="video/mp4" >
         </video>
